--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "fslightbox-react": "^1.7.6",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-carousel-card-3d": "^0.1.15",
