--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "fslightbox-react": "^1.7.6",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-carousel-card-3d": "^0.1.15",
@@ -21,7 +20,8 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
     "react-swipeable": "^7.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.11.4"
   },
   "scripts": {
     "start": "react-scripts start",
